# andranik

./: .gitignore  .gitmodules  README.md  engine.py  main.py  pyproject.toml  test.py
ml/: README.md  __init__.py  downscale_canny.py  edge_detection.py  main.py  model_utils.py  pyproject.toml
ml/model/: chess_piece_nn.py  dataset.py  make_dataset.py  train.py
ui/: board.py  fen.py
