[project]
name = "andranik"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fentoimage",
    "ml",
    "pillow>=11.1.0",
    "stockfish>=3.28.0",
]

[tool.uv.sources]
ml = { path = "ml" }
fentoimage = { path = "fen-to-image" }
