[project]
name = "ml"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "matplotlib>=3.10.1",
    "numpy>=2.0.2",
    "opencv-python>=4.11.0.86",
    "pygobject>=3.50.0",
    "tensorflow>=2.18.0",
]

[tool.uv.workspace]
members = ["chess_board"]
