[project]
name = "ml"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "chess>=1.11.2",
    "kagglehub>=0.3.10",
    "matplotlib>=3.10.1",
    "numpy>=2.0.2",
    "opencv-python>=4.11.0.86",
    "pygobject>=3.50.0",
    "torch>=2.6.0",
    "torchvision>=0.21.0",
    "tqdm>=4.67.1",
]

[tool.uv.workspace]
members = ["chess_board"]
